2006-09-15 [colin]	2.4.0cvs189

	* src/summaryview.c
		HIG order on dialog

2006-09-14 [colin]	2.4.0cvs188

	* src/common/socket.c
	* src/common/socket.h
	* src/common/ssl.c
	* src/common/ssl_certificate.c
	* src/common/ssl_certificate.h
	* src/etpan/imap-thread.c
		the get_fqdn() call done to get canonical name when
		checking an SSL certificate is blocking, which is
		sad as we just did a non-blocking lookup to connect.
		Fix that by letting the fqdn available to the SockInfo,
		and use that in ssl_certificate_check(). For IMAP,
		we don't do it as the lookup's done by libetpan, but
		it's less annoying as IMAP connections as much more
		rare than POP3 connections.

2006-09-14 [paul]	2.4.0cvs187

	* manual/advanced.xml
		improvements to the English,
		properly place the new hidden options
		within the alphabetical order
	* src/gtk/pluginwindow.c
		improvements to the English

2006-09-14 [colin]	2.4.0cvs186

	* src/prefs_common.c
	* src/prefs_common.h
	* src/gtk/gtksctree.c
	* manual/advanced.xml
		New hidden pref, stripes_color_offset, to change
		the value added/substracted to normal bgcolor to
		create the stripes in summaries

2006-09-13 [colin]	2.4.0cvs185

	* src/gedit-print.c
	* src/messageview.c
	* src/messageview.h
	* src/summaryview.c
	* src/textview.c
		Fix misc. printing issues: 
		- Bad font for linkified headers
		- Different font if the mail was displayed or not
		- Factorize the thing

2006-09-13 [colin]	2.4.0cvs184

	* src/common/ssl_certificate.c
		Only get FQDN once when checking certificate

2006-09-13 [colin]	2.4.0cvs183

	* src/account.c
	* src/gtk/pluginwindow.c
		Misc. GUI fixes by Fabien

2006-09-13 [wwp]	2.4.0cvs182

	* configure.ac
	* src/common/utils.h
	* src/common/utils.c
		get rid of unused wide-char functions.

2006-09-13 [wwp]	2.4.0cvs181

	* src/plugins/pgpinline/sylpheed.def
	* src/textview.c
		merge more w32 patches from gpg4win sources (Marcus Brinkmann <marcus@g10code.de>):
		add privacy_reset_error to the .def file,