@@ -1,3 +1,8 @@
+2006-09-16 [paul]	2.4.0cvs190
+
+	* src/account.c
+		improvements to the English
+
 2006-09-15 [colin]	2.4.0cvs189
 
 	* src/summaryview.c
